<resources>
    <string name="app_name">Money Convertion</string>
    <string name="money_convertion_intro">Money Convertion adalah sebuah aplikasi konversi mata uang dari Rupiah ke USD (Unites States Dollar)</string>
    <string name="kolom_input_nominal">Masukkan Jumlah (IDR / USD)</string>
    <string name="hitung">Hitung</string>
    <string name="hasil_konvert">$ %1$.2f</string>
    <string name="nominal_invalid">Kolom tidak boleh kosong</string>
    <string name="pilihan">Pilihan</string>
    <string name="idrToUsd">IDR > USD</string>
    <string name="usdToIdr">USD > IDR</string>
    <string name="radioInvalid">Pilih kurs terlebih dahulu</string>
    <string name="usd_x">$ %1$s</string>
    <string name="rp_x">Rp %1$s</string>
    <string name="pilihanKonversi">IDR ke USD</string>
    <string name="copyright">Hak Cipta dalam aplikasi konversi mata uang ini dan segala kontennya,tidak terbatas pada desain, grafis, ikon, logo, teks, gambar, dan perangkat lunak terkait
        Money Convertion, dimiliki oleh Hermanus Hasta Wicaksana. Dengan menggunakan Aplikasi ini, Anda dianggap telah membaca, memahami, dan menyetujui semua syarat dan ketentuan yang tercantum di atas.
        Jika Anda tidak setuju dengan syarat dan ketentuan ini, harap menghentikan penggunaan Aplikasi ini.\nCopyright ©2023 All Rights Reserved.</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="histori">Histori</string>
    <string name="konversi_textView">Konversikan Sekarang Juga</string>
    <string name="idr_main">IDR</string>
    <string name="usd_main">USD</string>
    <string name="hapus">Hapus</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="batal">Batal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jenisKonversiIdrToUSD">IDR > USD</string>
    <string name="jenisKonversiUSDToIDR">USD > IDR</string>
    <string name="cekMedSos">Lihat sosial media kami di bawah ini </string>
    <string name="koneksi_error">Coba cek koneksi internet kamu xixi...</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data hewan otomatis</string>

    <string name="notif_title">Konversikan sekarang yuk!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran xixi...</string>

</resources>
